<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClaudiuApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_contact">Contact</string>
    <string name="instructor_contact">Instructor</string>
    <string name="address_contact">Adresa</string>
    <string name="telephone_contact">Telefon</string>
    <string name="site_contact">Site</string>
    <string name="photo_link_contact">Link poza</string>
    <string name="save_contact">Salveaza</string>
    <string name="profile_name">Nume</string>
    <string name="profile_forname">Prenume</string>
    <string name="profile_mail">Mail</string>
    <string name="profile_pass">Parola</string>
    <string name="profile_telephone">Telefon</string>
    <string name="profile_save">Salveaza modificarile</string>
    <string name="title_activity_contact_user">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_instructor">ContactInstructorActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_participants_list">ParticipantsListActivity</string>
    <string name="title_activity_show_zumba_types">ShowZumbaTypesActivity</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_read_notifications">ReadNotifications</string>
    <string name="title_activity_new_notifications">NewNotifications</string>
    <string name="title_activity_new_songs">NewSongs</string>
    <string name="title_activity_all_missed_notif">AllMissedNotif</string>
    <string name="title_activity_send_notification">SendNotification</string>
    <string name="title_activity_sent_notifications">SentNotifications</string>

</resources>
